# soap-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: ingredients.db  lipids.json  repository.json
include/: SoapInOut.h  SoapProfiles.h  SoapTypes.h  soap_params.h  utils.h
include/roles/: ModelRoles.h  model_roles.h
qml/: BaseButton.qml  Main.qml
qml/components/base/: BaseButton.qml  BaseCheckbox.qml  BaseInput.qml
qml/components/panels/: IngredientPanel.qml
qml/components/panels/ingredient-panel/: IngredientPanel.qml
qml/components/panels/ingredient-panel/ingredient-components/: IngredientButtons.qml  IngredientSearch.qml  IngredientTitle.qml  IngredientView.qml
qml/themes/: Theme.qml
resources/: resources.qrc
src/app/: main.cpp
src/app/app-settings/: AppSettings.cpp  AppSettings.h  app_settings.cpp  app_settings.h
src/core/: InputBuilder.cpp  InputBuilder.h  SoapCore.cpp  SoapCore.h  input_builder.cpp  input_builder.h  soap_core.cpp  soap_core.h
src/interfaces/: irepository.cpp  irepository.h
src/interfaces/repository-interface/: IRepositoryManageable.h  irepository.h
src/interfaces/repository-interface/json-interface/: ijson_repository.cpp  ijson_repository.h
src/models/: acid_model.cpp  acid_model.h  additive_model.cpp  additive_model.h  base_model.h  lipid_model.cpp  lipid_model.h
src/models/acid-model/: AcidModel.cpp  AcidModel.h  acid_model.cpp  acid_model.h
src/models/additive-model/: AdditiveModel.cpp  AdditiveModel.h  additive_model.cpp  additive_model.h
src/models/filter-proxy-model/: IngredientFilterProxyModel.h  ingredient_filter_proxy_model.cpp  ingredient_filter_proxy_model.h
src/models/lipid-model/: LipidModel.cpp  LipidModel.h  lipid_model.cpp  lipid_model.h
src/services/database-service/: DatabaseManager.cpp  DatabaseManager.h  RepositoryManager.cpp  RepositoryManager.h  database.cpp  database.h
src/services/json-service/: JsonManager.cpp  JsonManager.h  json_loader.cpp  json_loader.h  json_manager.cpp  json_manager.h
